--- a/UI/homepage/dashboard-bank-index.html
+++ b/UI/homepage/dashboard-bank-index.html
@@ -56,13 +56,13 @@
       </li>
       <li class="no-padding">
         <ul class="collapsible collapsible-accordion">
-          <li id="btn-nbt" class="bold waves-effect"><a href="transactions.html"><i class="fa-solid fa-syringe"></i> Transactions</a>
+          <li id="btn-nbt" class="bold waves-effect"><a href="/homepage/transactions.html"><i class="fa-solid fa-syringe"></i> Transactions</a>
 
           </li>
-          <li id="btn-nbt" class="bold waves-effect"><a href="Records.html"> <i class="fa-solid fa-clipboard"></i>Records</a>
+          <li id="btn-nbt" class="bold waves-effect"><a href="/homepage/Records.html"> <i class="fa-solid fa-clipboard"></i>Records</a>
 
           </li>
-          <li id="btn-nbt" class="bold waves-effect"><a href="./new_donation.html"> <i class="fa-solid fa-bottle-droplet"></i> New Donations</a>
+          <li id="btn-nbt" class="bold waves-effect"><a href="/homepage/new_donation.html"> <i class="fa-solid fa-bottle-droplet"></i> New Donations</a>
 
           </li>
           <li id="btn-nbt" class="bold waves-effect"><a><i class="fa-solid fa-address-card"></i> New Receptions</a>
@@ -72,7 +72,7 @@
 
           </li>
       </li>
-      <li id="btn-nbt" class="bold waves-effect"> <a href="issues.html"> <i class="fa-solid fa-triangle-exclamation"></i> Issues</a>
+      <li id="btn-nbt" class="bold waves-effect"> <a href="/homepage/issues.html"> <i class="fa-solid fa-triangle-exclamation"></i> Issues</a>
 
       </li>
       <li id="btn-nbt" class="bold waves-effect"><a><i class="fa-solid fa-user"></i> Account</a>
