--- a/UI/homepage/new_donation.html
+++ b/UI/homepage/new_donation.html
@@ -123,7 +123,7 @@
     <hr>
     <h5>3. Fill the data <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Open Form</a> </h5>
     <hr>
-    <h5>4. Complete Transaction! <input type="button"  value="Complete Transaction" id="complete_transaction"></h5>
+    <h5>4. Complete Transaction! <input type="button"  value="CompleteTransaction" id="something" onclick="completetran()"></h5>
     <hr>
     <h6 class="status-transaction">Uploading Data to IPFS...</h6>
     
